[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/TitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="TitleScreen" parent="." instance=ExtResource( 1 )]

[connection signal="continue_game" from="TitleScreen" to="." method="_on_TitleScreen_continue_game"]
[connection signal="open_options" from="TitleScreen" to="." method="_on_TitleScreen_open_options"]
[connection signal="quit" from="TitleScreen" to="." method="_on_TitleScreen_quit"]
[connection signal="start_game" from="TitleScreen" to="." method="_on_TitleScreen_start_game"]
